--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ h1 {
   margin: 20px 0 0;
 }
 
+.header {
+  text-align: center;
+}
+
 .game-container {
   padding: 20px 30px;
   position: relative;
