--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,8 @@ h1 {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 10px 10px 0 0;
   padding: 15px 20px;
+  width: 430 px;
+  max-width: 40%;
   position: absolute;
   bottom: -50px;
   transition: transform 0.3s ease-in-out;
